POR/RefEdge/src/objects/Community_Invite_Contact__c.object
<CustomObject>
    <description>Customer Reference Community (Bound 12)</description>
    <fields>
        <fullName>Account_f__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Challenge_Id__c</fullName>
        <label>Challenge Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Invite__c</fullName>
        <label>Community Invite</label>
        <referenceTo>Community_Invite__c</referenceTo>
        <relationshipLabel>Community Invite Contacts</relationshipLabel>
        <relationshipName>Community_Invite_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Contact__r.FirstName +&apos; &apos;+ Contact__r.LastName</formula>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Community Invite Contacts</relationshipLabel>
        <relationshipName>Community_Invite_Contacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <formula>&apos;&apos;+TEXT(DATEVALUE(TEXT(Community_Invite__r.Community_Participate_Deadline__c)))</formula>
        <label>Deadline</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Project_link__c</fullName>
        <formula>HYPERLINK( Community_Invite__r.Org_Instance_URl__c +&apos;/apex/&apos;+ $Setup.POR_App_Configuration__c.Namespace__c +&apos;RefRequestProject?Id=&apos;+Community_Invite__r.Reference_Request__c,&apos;Reference Request Link&apos;, &quot;_blank&quot;)</formula>
        <label>Reference Project link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referenceability_Type__c</fullName>
        <formula>Community_Invite__r.Referenceability_Type__r.Name</formula>
        <label>Referenceability Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>With__c</fullName>
        <formula>Community_Invite__r.Community_Participate_With__c</formula>
        <label>With</label>
        <type>Text</type>
    </fields>
    <label>Community Invite Contact</label>
    <nameField>
        <displayFormat>CIC-{0000}</displayFormat>
        <label>Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Invite Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>